--- a/src/main/webapp/css/dropbtn.css
+++ b/src/main/webapp/css/dropbtn.css
@@ -12,8 +12,7 @@
 }
 
 .dropbtn {
-    background-color: #4CAF50;
-    color: white;
+    color: black;
     padding: 16px;
     font-size: 16px;
     border: none;
